Fix layout bug caused by new font

--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ a:visited {
 }
 
 .if-you {
-  width: 260px;
+  width: 280px;
   margin: 120px 0 0 0;
 }
 
@@ -73,7 +73,7 @@ a:visited {
 }
 
 .you-would-have {
-  width: 260px;
+  width: 280px;
 }
 
 #dollar {
@@ -90,8 +90,7 @@ a:visited {
 
 .equal-sign,
 .slash-sign {
-  font-size: 3rem;
-  font-weight: bold;
+  font-size: 2.75rem;
 }
 
 .equal-sign {
